--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Ryan Wilhelm
+        </title>
+    </head>
+    <body>
+        <hl>Ryan Wilhelm's CSCE 190 Site</hl>
+    </body>
+</html>
