--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <hl>Ryan Wilhelm's CSCE 190 Site</hl>
+        <section class="assignment">
+            <img src="images/problem statement image 2">
+        </section>
     </body>
 </html>
