--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
         </title>
     </head>
     <body>
-        <hl>Ryan Wilhelm's CSCE 190 Site</hl>
-        <section class="assignment">
-            <img src="images/problem statement image 2">
-        </section>
+        <hl>Ryan Wilhelm's CSCE 190 Site</
     </body>
 </html>
