--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         </title>
     </head>
     <body>
-        <hl>Ryan Wilhelm's CSCE 190 Site</
+        <hl>Ryan Wilhelm's CSCE 190 Sitesss</hl>
+        <section class="assignment">
+            <a href="files/Trackers - Title Page.pdf"><img src="images/problem.png.png"></a>
+            <section class="ass-details">
+                <a href="files/Trackers - Title Page.pdf"><h2>Problem Statement: Railroads</h2></a>
+                <p>Create an application that either scrapes public record for train times or intelligently predicts when trains will cross certain crossings so as to optimize the commute of both drivers and pedestrians alike.</p>
+                
+            </section>
+        </section>
     </body>
 </html>
