--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     </head>
     <body>
         <hl>Ryan Wilhelm's CSCE 190 Sitesss</hl>
+
+        <!-- Problem Statement Assignment-->
         <section class="assignment">
-            <a href="files/Trackers - Title Page.pdf"><img src="images/problem.png.PNG"></a>
+            <a href="files/Trackers - Title Page.pdf"><img src="images/problem.png.png"></a>
             <section class="ass-details">
                 <a href="files/Trackers - Title Page.pdf"><h2>Problem Statement: Railroads</h2></a>
                 <p>Create an application that either scrapes public record for train times or intelligently predicts when trains will cross certain crossings so as to optimize the commute of both drivers and pedestrians alike.</p>
+                
+            </section>
+        </section>
+
+        <!-- Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/Trackers Affinity Diagram.pdf"><img src="images/AffinityDiagram.png"></a>
+            <section class="ass-details">
+                <a href="files/Trackers Affinity Diagram.pdf"><h2>Affinity Diagram: Railroads</h2></a>
+                <p>
+                    Myself and my group worked together to find everything for railroads.
+                </p>
                 
             </section>
         </section>
