--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!-- Problem Statement Assignment-->
         <section class="assignment">
-            <a href="files/Trackers - Title Page.pdf"><img src="images/problem.png.png"></a>
+            <a href="files/Trackers - Title Page.pdf"><img src="images/problem.png.PNG"></a>
             <section class="ass-details">
                 <a href="files/Trackers - Title Page.pdf"><h2>Problem Statement: Railroads</h2></a>
                 <p>Create an application that either scrapes public record for train times or intelligently predicts when trains will cross certain crossings so as to optimize the commute of both drivers and pedestrians alike.</p>
