--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!-- Problem Statement Assignment-->
         <section class="assignment">
-            <a href="files/Trackers - Title Page.pdf"><img src="images/problem.png.PNG"></a>
+            <a href="files/Trackers - Title Page.pdf"><img src="images/problem.png.png"></a>
             <section class="ass-details">
                 <a href="files/Trackers - Title Page.pdf"><h2>Problem Statement: Railroads</h2></a>
                 <p>Create an application that either scrapes public record for train times or intelligently predicts when trains will cross certain crossings so as to optimize the commute of both drivers and pedestrians alike.</p>
@@ -60,6 +60,19 @@
                 <a href="files/Trackers_Sketches.pdf"><h2>Sketch: 5 Sketches for Train Tracker</h2></a>
                 <p>
                     Some rough sketches for possible ideas of what the Train Tracker application might look like.
+                </p>
+                
+            </section>
+        </section>
+
+        <!-- Prototype assignment-->
+        <section class="assignment">
+            <a href="https://youtu.be/1wag1pCeRGI">
+                <img src="images/Paper Prototype.png"></a>
+            <section class="ass-details">
+                <a href="https://youtu.be/1wag1pCeRGI"><h2>Paper Prototype</h2></a>
+                <p>
+                    A paper walkthrough of the potential look of every screen.
                 </p>
                 
             </section>
