--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
         </section>
 
-        <!-- Prototype assignment-->
+        <!-- Paper Prototype assignment-->
         <section class="assignment">
             <a href="https://youtu.be/1wag1pCeRGI">
                 <h2>Paper Prototype</h2></a>
@@ -75,6 +75,18 @@
                 <img src="images/Paper Prototype.png"></a>
                 <p>
                     A paper walkthrough of the potential look of every screen.
+                </p>
+                
+            </section>
+
+             <!-- Trackers prototype assignment-->
+        <section class="assignment">
+            <a href="files/Trackers-Prototype/preview.html">
+                <h2>Prototype: Trackers App</h2></a>
+            <a href="files/Trackers-Prototype/preview.html">
+                <img src="images/Prototype.png"></a>
+                <p>
+                    A protoype of the Trackers app.
                 </p>
                 
             </section>
